<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.julianna.drinkingbuddy.GameOfWar"
    android:background="#ff339946">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/gow_logo"
        android:contentDescription="@string/gow_logo"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_one"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_text"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_two"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_text"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button_gow1"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:textColor="#ff000000"
        android:background="#ff22cb42" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/button_gow2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/button_gow1"
        android:layout_alignEnd="@+id/button_gow1"
        android:layout_alignStart="@+id/button_gow1"
        android:background="#ff22cb42"
        android:clickable="true"
        android:focusable="true"
        android:onClick="selfDestruct" />

</RelativeLayout>
